--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1312,7 +1312,7 @@ a {
   color: rgba(99, 117, 136, 0.7);
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768.8px) {
   .header-navbar__btn {
     display: none;
   }
@@ -1321,18 +1321,6 @@ a {
 @media (max-width: 992px) {
   h1 {
     font-size: 2.5rem;
-  }
-  .header-content .header-content__container .header-content__title {
-    margin: 1px auto 43px auto;
-  }
-  .header-content .header-content__container .header-content__title .header-content__buttons .header-content__btn {
-    margin: 0 10px;
-    min-width: 200px;
-    height: 50px;
-    padding-top: 14px;
-    padding-bottom: 14px;
-    letter-spacing: 0.1em;
-    font-size: 1rem;
   }
   .skills .skills__container .skill-item__link {
     font-size: 1.25rem;
@@ -1380,10 +1368,22 @@ a {
   }
 }
 
-@media (max-width: 769px) {
-  .header-menu {
-    background-color: rgba(68, 89, 110, 0.25);
+@media (max-width: 992px) and (min-width: 768.8) {
+  .header-content .header-content__container .header-content__title {
+    margin: 1px auto 43px auto;
   }
+  .header-content .header-content__container .header-content__buttons .header-content__btn {
+    margin: 0 10px;
+    min-width: 200px;
+    height: 50px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    letter-spacing: 0.1em;
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 769px) {
   .header-navbar__list {
     display: none;
     position: absolute;
@@ -1397,19 +1397,10 @@ a {
     margin-right: 10px;
     margin: 0;
   }
-}
-
-@media (max-width: 768px) {
-  h1 {
-    font-size: 1.875rem;
-  }
-  .header-logo {
-    margin: 0 0 20px 20px;
-  }
   .header-content .header-content__container .header-content__title {
     margin: 1px 0 33px 0;
   }
-  .header-content .header-content__container .header-content__title .header-content__buttons .header-content__btn {
+  .header-content .header-content__container .header-content__buttons .header-content__btn {
     margin: 0 10px;
     min-width: 170px;
     height: 40px;
@@ -1417,6 +1408,18 @@ a {
     padding-bottom: 10px;
     letter-spacing: 0.05em;
     font-size: 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 1.875rem;
+  }
+  .header-menu {
+    background-color: rgba(68, 89, 110, 0.25);
+  }
+  .header-logo {
+    margin: 0 0 20px 20px;
   }
   .skills .skills__container .skill-item__link {
     font-size: 1.125rem;
@@ -1552,10 +1555,13 @@ a {
   }
   .posts .posts__container h2 {
     text-align: center;
+    margin-top: -1px;
   }
   .posts .posts__container .posts__grid {
     grid-template-areas: "p1" "p2" "p3" "p4" "p5" "p6";
     grid-template-columns: 1fr;
+  }
+  .posts .posts__container .posts__grid .post-item .post-item__link {
     margin-top: 1px;
   }
   .posts .posts__button {
