--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,13 +1,13 @@
 .footer {
-  padding: 50px 20px 50px;
+  padding: 50px $gap 50px;
   text-align: center;
   background-color: #2d3651;
   text-align: center;
   &__container {
     max-width: 1340px;
     margin: auto;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: $gap;
+    padding-left: $gap;
   }
 
   &__social {
@@ -32,18 +32,18 @@
   
   &__copy {
     position: relative;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: $gap;
+    margin-bottom: $gap;
     width: 100%;
     color: $color-gray;
-    font-family: "Roboto", sans-serif;
+    font-family: $font-main;
     font-size: 16px;
     letter-spacing: 0.05em;
     color: $color-gray-light;
     font-weight: 700;
     &::before {
       position: absolute;
-      bottom: -20px;
+      bottom: -$gap;
       left: calc(50% - 75px / 2);
       width: 75px;
       height: 2px;
