--- a/assets/scss/header/_header-content.scss
+++ b/assets/scss/header/_header-content.scss
@@ -17,23 +17,6 @@
       letter-spacing: 0.08em;
       font-weight: 300;
       line-height: 1.2em;
-
-      // @media (max-width: 992px) {
-      //   & {
-      //     margin: 1px auto 43px auto;
-      //   }
-      // }
-      // @media (max-width: 768px) {
-      //   & {
-      //     margin: 1px 0 33px 0;
-      //   }
-      // }
-      // @media (max-width: 576px) {
-      //   & {
-      //     margin: 1px 0 33px 0;
-      //     width: 400px;
-      //   }
-      // }
     }
   }
   .header-content__buttons {
@@ -66,84 +49,46 @@
       &:hover {
         background-color: $color-accent;
       }
-
-      // @media (max-width: 992px) {
-      //   & {
-      //     margin: 0 10px;
-      //     min-width: 200px;
-      //     height: 50px;
-      //     padding-top: 14px;
-      //     padding-bottom: 14px;
-      //     letter-spacing: 0.1em;
-      //     font-size: 1rem;
-      //   }
-
-      // @media (max-width: 768px) {
-      //   & {
-      //     margin: 0 10px;
-      //     min-width: 170px;
-      //     height: 40px;
-      //     padding-top: 10px;
-      //     padding-bottom: 10px;
-      //     letter-spacing: 0.05em;
-      //     font-size: 1rem;
-      //   }
-      // }
-
-      // @media (max-width: 576px) {
-      //   & {
-      //     margin: 0 10px;
-      //     min-width: 170px;
-      //     height: 40px;
-      //     padding: 10px 20px;
-      //     letter-spacing: 0.05em;
-      //     font-size: 1rem;
-      //   }
-
-      //   &:not(:last-of-type) {
-      //     margin-bottom: 20px;
-      //   }
-      // }
     }
   }
 }
 
-@media (max-width: 992px) {
+@media (max-width: 992px) and (min-width: 768.8) {
   .header-content {
     .header-content__container {
       .header-content__title {
         margin: 1px auto 43px auto;
-        .header-content__buttons {
-          .header-content__btn {
-            margin: 0 10px;
-            min-width: 200px;
-            height: 50px;
-            padding-top: 14px;
-            padding-bottom: 14px;
-            letter-spacing: 0.1em;
-            font-size: 1rem;
-          }
+      }
+      .header-content__buttons {
+        .header-content__btn {
+          margin: 0 10px;
+          min-width: 200px;
+          height: 50px;
+          padding-top: 14px;
+          padding-bottom: 14px;
+          letter-spacing: 0.1em;
+          font-size: 1rem;
         }
       }
     }
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 769px) {
   .header-content {
     .header-content__container {
       .header-content__title {
         margin: 1px 0 33px 0;
-        .header-content__buttons {
-          .header-content__btn {
-            margin: 0 10px;
-            min-width: 170px;
-            height: 40px;
-            padding-top: 10px;
-            padding-bottom: 10px;
-            letter-spacing: 0.05em;
-            font-size: 1rem;
-          }
+      }
+      .header-content__buttons {
+        .header-content__btn {
+          margin: 0 10px;
+          min-width: 170px;
+          height: 40px;
+          padding-top: 10px;
+          padding-bottom: 10px;
+          letter-spacing: 0.05em;
+          font-size: 1rem;
         }
       }
     }
