--- a/assets/scss/header/_header-menu.scss
+++ b/assets/scss/header/_header-menu.scss
@@ -2,15 +2,17 @@
     position: relative;
     z-index: 2;
     width: 100%;
-
-    @media (max-width: 769px) {
-      background-color: rgba($color-gray-dark, 0.25);
-    }
   
     &__container {
-      padding-top: 20px;
+      padding-top: $gap;
       @extend %container;
       justify-content: space-between;
       align-items: center;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .header-menu {
+      background-color: rgba($color-gray-dark, 0.25);
     }
   }
