--- a/assets/scss/sections/posts/_posts-container.scss
+++ b/assets/scss/sections/posts/_posts-container.scss
@@ -1,8 +1,8 @@
 .posts__container {
   @extend %container;
   flex-flow: column;
-  padding-right: 20px;
-  padding-left: 20px;
+  padding-right: $gap;
+  padding-left: $gap;
 
   h2 {
     max-height: 48px;
@@ -10,7 +10,7 @@
     margin: 0;
     letter-spacing: 0.1em;
     color: #2d3651;
-    font-family: "Roboto Slab", serif;
+    font-family: $font-header;
     line-height: 1.2em;
     font-size: 2.5rem;
     margin-bottom: 56px;
@@ -28,8 +28,8 @@
   .posts__grid {
     position: relative;
     display: grid;
-    padding-bottom: 20px;
-    grid-gap: 20px;
+    padding-bottom: $gap;
+    grid-gap: $gap;
     grid-template-areas:
       "p1 p1 p2 p3"
       "p4 p5 p6 p6";
@@ -86,8 +86,8 @@
     align-self: center;
     transition: color 0.5s;
     text-align: center;
-    font-family: "Roboto Slab", serif;
-    padding: 20px;
+    font-family: $font-header;
+    padding: $gap;
 
     h3 {
       letter-spacing: 0.05em;
@@ -182,6 +182,7 @@
   .posts__container {
     h2 {
       text-align: center;
+      margin-top: -1px;
     }
     .posts__grid {
       grid-template-areas:
@@ -192,10 +193,11 @@
         "p5"
         "p6";
       grid-template-columns: 1fr;
-      margin-top: 1px;
       .post-item {
         .post-item__link {
+          margin-top: 1px;
           .post-item__image {
+            
             img {
             }
           }
