--- a/assets/scss/sections/skills/_skills-button.scss
+++ b/assets/scss/sections/skills/_skills-button.scss
@@ -1,7 +1,7 @@
 .skills__button {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: $gap;
   .btn-accent {
     min-width: 350px;
     height: 60px;
@@ -24,7 +24,7 @@
 @media (max-width: 576px) {
   .skills__button{
     .btn-accent{
-      padding: 18px 20px;
+      padding: 18px $gap;
       width: 100%;
     }
   }
