--- a/assets/scss/sections/skills/_skills-container.scss
+++ b/assets/scss/sections/skills/_skills-container.scss
@@ -53,7 +53,7 @@
       align-items: center;
       letter-spacing: 0.1em;
       transition: color 0.5s;
-      font-family: "Roboto", sans-serif;
+      font-family: $font-main;
 
       @media (max-width: 992px) {
         font-size: 1.25rem;
@@ -180,7 +180,7 @@
 
 @media (max-width: 576px) {
   .skills__container {
-    grid-gap: 20px;
+    grid-gap: $gap;
     grid-template-areas:
       "a1"
       "a2"
