--- a/assets/scss/header/_header-content.scss
+++ b/assets/scss/header/_header-content.scss
@@ -22,11 +22,6 @@
   .header-content__buttons {
     display: flex;
     justify-content: center;
-
-    @media (max-width: 576px) {
-      & {
-        flex-direction: column;
-      }
     }
 
     .header-content__btn {
@@ -51,51 +46,54 @@
       }
     }
   }
-}
 
-@media (max-width: 992px) and (min-width: 768.8) {
+
+@media (max-width: 991px) {
   .header-content {
     .header-content__container {
+      
       .header-content__title {
         margin: 1px auto 43px auto;
       }
-      .header-content__buttons {
-        .header-content__btn {
-          margin: 0 10px;
-          min-width: 200px;
-          height: 50px;
-          padding-top: 14px;
-          padding-bottom: 14px;
-          letter-spacing: 0.1em;
-          font-size: 1rem;
-        }
+    }
+    .header-content__buttons {
+      .header-content__btn {
+        margin: 0 10px;
+        min-width: 200px;
+        height: 50px;
+        padding-top: 14px;
+        padding-bottom: 14px;
+        letter-spacing: 0.1em;
+        font-size: 1rem;
       }
     }
   }
 }
 
-@media (max-width: 769px) {
+@media (max-width: 767px)  {
   .header-content {
     .header-content__container {
+      
       .header-content__title {
+        width: 536px;
         margin: 1px 0 33px 0;
       }
-      .header-content__buttons {
-        .header-content__btn {
-          margin: 0 10px;
-          min-width: 170px;
-          height: 40px;
-          padding-top: 10px;
-          padding-bottom: 10px;
-          letter-spacing: 0.05em;
-          font-size: 1rem;
-        }
+    }
+    .header-content__buttons {
+      .header-content__btn {
+        margin: 0 10px;
+        min-width: 170px;
+        height: 40px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        letter-spacing: 0.05em;
+        font-size: 1rem;
       }
     }
   }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 575px) {
   .header-content {
     .header-content__container {
       .header-content__title {
@@ -103,6 +101,7 @@
         width: 400px;
       }
       .header-content__buttons {
+        flex-direction: column;
         .header-content__btn {
           margin: 0 10px;
           min-width: 170px;
