--- a/assets/scss/sections/_section-about.scss
+++ b/assets/scss/sections/_section-about.scss
@@ -2,13 +2,7 @@
   letter-spacing: 0.055em;
   background-color: $color-gray-light;
   padding-top: 100px;
-  padding-bottom: 82px;
-  // @media (max-width: 992px) {
-  //   padding: 80px 0 64px 0;
-  // }
-  // @media (max-width: 768px) {
-  //   padding: 60px 0 44px 0;
-  // }
+  padding-bottom: 100px;
 
   .about__container {
     @extend %container;
@@ -16,19 +10,6 @@
     padding: 0 $gap;
     .about__content {
       display: block;
-      width: 924px;
-      // @media (max-width: 992px) {
-      //   width: 640px;
-      //   margin: 0;
-      //   padding-top: 0;
-      //   padding-bottom: 0;
-      // }
-      // @media (max-width: 768px) {
-      //   width: 470px;
-      //   margin: 0;
-      //   padding-top: 0;
-      //   padding-bottom: 0;
-      // }
 
       h2 {
         font-size: 2.5rem;
@@ -37,14 +18,6 @@
         font-family: $font-header;
         line-height: 1.2em;
         margin: 0 0 51px 0;
-        // @media (max-width: 992px) {
-        //   margin-bottom: 37px;
-        //   font-size: 2rem;
-        // }
-        // @media (max-width: 768px) {
-        //   margin-bottom: 31px;
-        //   font-size: 1.5rem;
-        // }
 
         .about__content--accent {
           font-family: $font-header;
@@ -56,14 +29,7 @@
         font-family: "Roboto", serif;
         font-size: 1.125rem;
         position: relative;
-        // @media (max-width: 992px) {
-        //   font-size: 1rem;
-        //   line-height: 1.15em;
-        //   margin: 15px 0 16px 0;
-        // }
-        // @media (max-width: 768px) {
-        //   margin: 10px 0 16px 0;
-        // }
+        margin-bottom: 0;
 
         &:first-of-type::after {
           position: absolute;
@@ -74,46 +40,52 @@
           background-color: rgba(99, 117, 136, 0.1);
           right: -55px;
 
-          @media (max-width: 992px) {
-            right: -$gap;
+          @media (max-width: 991px) {
+            right: -20px;
           }
-          @media (max-width: 768px) {
-            right: -11px;
+
+          @media (max-width: 767px) {
+            right: -10px;
           }
+      
         }
       }
     }
-  }
+    .about__image {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-width: 271px;
+      margin-top: 2px;
+      margin-left: 105px;
+      @media (max-width: 991px) {
+        margin-left: 40px;
+        margin-bottom: 20px;
+      }
 
-  .about__image {
-    display: inline-flex;
-    justify-content: center;
-    align-content: center;
-    img {
-      position: relative;
-      max-width: 100%;
-      max-height: 480px;
-      margin-top: 10px;
-      margin-left: 107px;
-      // @media (max-width: 992px) {
-      //   margin-left: 42px;
-      // }
-      // @media (max-width: 768px) {
-      //   width: 236px;
-      //   height: 425px;
-      //   margin-left: 21px;
-      //   margin-top: 70px;
-      // }
+      @media (max-width: 767px) {
+        margin-left: 2px;
+        margin-bottom: 20px;
+      }
+      @media (max-width: 575px) {
+        margin-left: 132px;
+        margin-top: 4px;
+      }
+
+      img {
+        position: relative;
+        max-width: 100%;
+        max-height: 480px;
+      }
     }
   }
 }
 
-@media (max-width: 992px) {
+@media (max-width: 991px) {
   .about {
     padding: 80px 0 64px 0;
     .about__container {
       .about__content {
-        width: 640px;
         margin: 0;
         padding-top: 0;
         padding-bottom: 0;
@@ -124,6 +96,7 @@
           }
         }
         p {
+          width: 417px;
           font-size: 1rem;
           line-height: 1.15em;
           margin: 15px 0 16px 0;
@@ -132,44 +105,38 @@
     }
     .about__image {
       img {
-        margin-left: 42px;
       }
     }
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .about {
     padding: 60px 0 44px 0;
     .about__container {
       .about__content {
-        width: 470px;
-        margin: 0;
-        padding-top: 0;
-        padding-bottom: 0;
         h2 {
           margin-bottom: 31px;
           font-size: 1.5rem;
           .about__content--accent {
           }
-          p {
-            margin: 10px 0 16px 0;
-          }
+        }
+        p {
+          width: 280px;
+          margin: 10px 0 16px 0;
         }
       }
-      .about__image {
-        img {
-          width: 236px;
-          height: 425px;
-          margin-left: 21px;
-          margin-top: 70px;
-        }
+    }
+    .about__image {
+      width: 236px;
+      img {
+        height: 425px;
       }
     }
   }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 575px) {
   .about {
     padding-bottom: 60px;
     .about__container {
@@ -182,16 +149,18 @@
           .about__content--accent {
             padding: 0 0 0 160px;
           }
-          p {
-          }
+        }
+        
+        p {
+          width: 535px;
         }
       }
-      .about__image {
-        img {
-          margin: 4px 0 0 0;
-          width: 266.55px;
-          height: 480px;
-        }
+    }
+    .about__image {
+      
+      width: 266.55px;
+      img {
+        height: 480px;
       }
     }
   }
