--- a/assets/scss/header/_header.scss
+++ b/assets/scss/header/_header.scss
@@ -6,4 +6,7 @@
     background-size: cover;
     background-position: 50% 50%;
     position: relative;
+    display: flex;
+    align-items: center;
+    padding: 100px 0;
 }
