--- a/assets/scss/header/_header-logo.scss
+++ b/assets/scss/header/_header-logo.scss
@@ -1,7 +1,6 @@
 .header-logo {
     letter-spacing: 0.22em;
     font-size: 1.5rem;
-    margin-left: $gap;
     font-weight: 400;
    
     &__link {
@@ -16,7 +15,7 @@
   }
   @media (max-width: 767px) {
     .header-logo {
-      margin: 0 0 $gap $gap;
+      // margin: 0 0 $gap $gap;
       .header-logo__link {
       }
     }
