--- a/assets/scss/header/_header-menu.scss
+++ b/assets/scss/header/_header-menu.scss
@@ -1,10 +1,13 @@
 .header-menu {
-    position: relative;
+    position: absolute;
     z-index: 2;
     width: 100%;
+    left: 0;
+    top: 0;
   
     &__container {
       padding-top: $gap;
+      padding-bottom: $gap;
       @extend %container;
       justify-content: space-between;
       align-items: center;
