--- a/assets/scss/header/_header-navbar.scss
+++ b/assets/scss/header/_header-navbar.scss
@@ -3,12 +3,12 @@
     width: 30px;
     height: 22.5px;
     position: relative;
-    margin: 0 20px 20px 20px;
     transform: rotate(0deg);
     transition: 0.5s ease-in-out;
     cursor: pointer;
+    
 
-    @media (min-width: 767px) {
+    @media (min-width: 768px) {
       display: none;
     }
     &-row {
@@ -87,15 +87,15 @@
 
   &__list {
     display: flex;
-    position: right;
     letter-spacing: 0.1em;
     padding: 0;
+    margin-right: -20px;
 
     @media (max-width: 767px) {
       display: none;
       position: absolute;
       top: calc(100% - 16px);
-      right: 20px;
+      right: 40px;
       text-align: end;
       background-color: rgba($color-gray-dark, 0.9);
     }
