--- a/assets/scss/sections/_section-form.scss
+++ b/assets/scss/sections/_section-form.scss
@@ -20,6 +20,7 @@
     .form-item {
       display: flex;
       width: 420px;
+      
       &:nth-child(2) {
         margin: 0 20px;
         @media (max-width: 767px) {
@@ -36,7 +37,7 @@
       }
 
       .form-item-input {
-        color: $color-light;
+        color: #9DA1AE;
         width: 100%;
         height: 60px;
         padding: 2px 30px 0 30px;
@@ -46,6 +47,13 @@
         border-bottom-color: rgba(255, 255, 255, 0.25);
         background-color: rgba(255, 255, 255, 0.05);
         font-size: 1.125rem;
+        &::-webkit-input-placeholder {
+          color: $color-gray;
+        }
+        &::-moz-placeholder{
+          color: $color-gray;
+        }
+        
         @media (max-width: 991px) {
           padding: 0 30px 1px 30px;
         }
