--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -663,6 +663,7 @@ a {
   letter-spacing: 0.1em;
   padding: 0;
   margin-right: -20px;
+  z-index: 3;
 }
 
 .header-navbar__list.open {
@@ -691,6 +692,7 @@ a {
   position: relative;
   z-index: 2;
   width: 100%;
+  z-index: 1;
 }
 
 .header-content__container {
@@ -704,7 +706,6 @@ a {
 }
 
 .header-content__container .header-content__title {
-  z-index: 2;
   position: relative;
   color: #ffffff;
   margin: auto auto 53px auto;
@@ -1415,6 +1416,9 @@ a {
     padding: 20px;
     margin-right: 10px;
     margin: 0;
+  }
+  .header-content .header-content__container {
+    z-index: 0;
   }
   .header-content .header-content__container .header-content__title {
     margin: 1px 0 33px 0;
